--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <button class="oper">/</button>
         </div>
         <div>
+            <button class="oper">^</button>
+            <button class="oper">√</button>
+            <button class="numbers">(</button>
+            <button class="numbers">)</button>
+        </div>
+        <div>
             <button class="numbers">7</button>
             <button class="numbers">8</button>
             <button class="numbers">9</button>
